apps/jellyseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr
  namespace: media
spec:
  rules:
    - host: ${INGRESS_HOSTNAME}
      http:
        paths:
          - path: /jellyseerr
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
